--- a/package.json
+++ b/package.json
@@ -9,18 +9,50 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@payloadcms/db-mongodb": "3.0.0-beta.123",
+    "@payloadcms/next": "3.0.0-beta.123",
+    "@payloadcms/payload-cloud": "3.0.0-beta.123",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.123",
+    "@payloadcms/storage-uploadthing": "3.0.0-beta.123",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@vercel/analytics": "^1.3.2",
+    "cal-sans": "^1.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.11",
+    "graphql": "^16.8.1",
+    "lucide-react": "^0.454.0",
+    "mongoose": "^6.12.3",
+    "next": "15.0.2",
+    "next-safe-action": "^7.9.9",
+    "next-themes": "^0.3.0",
+    "nextjs-google-analytics": "^2.3.7",
+    "payload": "3.0.0-beta.123",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
+    "resend": "4.0.1-alpha.0",
+    "sharp": "^0.33.5",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "typescript": "^5"
   }
 }
