--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@hookform/resolvers": "^3.9.1",
     "@payloadcms/db-mongodb": "3.0.0-beta.123",
     "@payloadcms/email-resend": "3.0.0-beta.123",
+    "@payloadcms/live-preview-react": "3.0.0-beta.126",
     "@payloadcms/next": "3.0.0-beta.123",
     "@payloadcms/payload-cloud": "3.0.0-beta.123",
     "@payloadcms/richtext-lexical": "3.0.0-beta.123",
     "@payloadcms/storage-uploadthing": "3.0.0-beta.123",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@vercel/analytics": "^1.3.2",
     "cal-sans": "^1.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "graphql": "^16.8.1",
+    "lexical": "0.18.0",
     "lucide-react": "^0.454.0",
     "markdown-to-jsx": "^7.5.0",
     "mongoose": "^6.12.3",
@@ -39,6 +43,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-tweet": "^3.2.1",
     "resend": "4.0.1-alpha.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.0",
