--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "15.0.2",
     "next-safe-action": "^7.9.9",
     "next-themes": "^0.3.0",
+    "next-view-transitions": "^0.3.2",
     "nextjs-google-analytics": "^2.3.7",
     "payload": "3.0.0-beta.123",
     "pino": "^9.5.0",
@@ -60,6 +61,7 @@
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-view-transitions": "^0.1.1",
     "typescript": "^5"
   }
 }
