--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint": "next lint --max-warnings=0",
+    "lint:fix": "next lint --fix",
+    "test": "next lint --max-warnings=0 && prettier --check . && tsc --noEmit",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -62,6 +67,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
+    "prettier": "3.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
