--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lucide-react": "^0.454.0",
     "markdown-to-jsx": "^7.5.0",
     "mongoose": "^6.12.3",
-    "next": "15.0.2",
+    "next": "15.2.2-canary.6",
     "next-plausible": "^3.12.4",
     "next-safe-action": "^7.9.9",
     "next-themes": "^0.3.0",
@@ -46,8 +46,8 @@
     "payload": "3.0.0-beta.123",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
@@ -60,15 +60,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.17.23",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/react-google-recaptcha": "^2.1.9",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.1",
     "postcss": "^8",
     "prettier": "3.5.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.6.2"
   }
 }
