--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,4 +46,5 @@ jobs:
       - name: Build
         run: pnpm run build
         env:
-          NEXT_PUBLIC_API_URL: http://localhost:3333
+          NEXT_PUBLIC_API_URL: http://localhost:3000
+          UPLOADTHING_SECRET: ${{ secrets.UPLOADTHING_SECRET }}
