fix: payload migrate version fix

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,3 +48,4 @@ jobs:
         env:
           NEXT_PUBLIC_API_URL: http://localhost:3000
           UPLOADTHING_SECRET: ${{ secrets.UPLOADTHING_SECRET }}
+          DATABASE_URI: ${{ secrets.DATABASE_URI }}
