--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@payloadcms/db-mongodb": "3.0.0-beta.123",
-    "@payloadcms/email-resend": "3.0.0-beta.123",
-    "@payloadcms/live-preview-react": "3.0.0-beta.123",
-    "@payloadcms/next": "3.0.0-beta.123",
-    "@payloadcms/payload-cloud": "3.0.0-beta.123",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.123",
-    "@payloadcms/storage-uploadthing": "3.0.0-beta.123",
+    "@payloadcms/db-mongodb": "^3.27.0",
+    "@payloadcms/email-resend": "^3.27.0",
+    "@payloadcms/live-preview-react": "^3.27.0",
+    "@payloadcms/next": "^3.27.0",
+    "@payloadcms/payload-cloud": "^3.27.0",
+    "@payloadcms/richtext-lexical": "^3.27.0",
+    "@payloadcms/storage-uploadthing": "^3.27.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -33,19 +33,16 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "graphql": "^16.8.1",
-    "lexical": "0.18.0",
+    "lexical": "0.21.0",
     "lucide-react": "^0.454.0",
     "markdown-to-jsx": "^7.5.0",
-    "mongoose": "^6.12.3",
     "next": "15.2.2-canary.6",
     "next-plausible": "^3.12.4",
     "next-safe-action": "^7.9.9",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.5",
     "next-view-transitions": "^0.3.2",
     "nextjs-google-analytics": "^2.3.7",
-    "payload": "3.0.0-beta.123",
-    "pino": "^9.5.0",
-    "pino-pretty": "^11.3.0",
+    "payload": "^3.27.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-google-recaptcha": "^3.1.0",
