feat: git tests and prettier
* init: git tests and prettier

* fix: format

* fix: lint

* feat: enable ppr

* fix: tsc

* fix: ci test

* feat: better homepage structure

* fix: payload migrate version fix

* fix: format

* fix: ci test

ppr is breaking this

--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint": "next lint --max-warnings=0",
+    "lint:fix": "next lint --fix",
+    "test": "next lint --max-warnings=0 && prettier --check . && tsc --noEmit",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@payloadcms/db-mongodb": "3.0.0-beta.123",
-    "@payloadcms/email-resend": "3.0.0-beta.123",
-    "@payloadcms/live-preview-react": "3.0.0-beta.123",
-    "@payloadcms/next": "3.0.0-beta.123",
-    "@payloadcms/payload-cloud": "3.0.0-beta.123",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.123",
-    "@payloadcms/storage-uploadthing": "3.0.0-beta.123",
+    "@payloadcms/db-mongodb": "^3.27.0",
+    "@payloadcms/email-resend": "^3.27.0",
+    "@payloadcms/live-preview-react": "^3.27.0",
+    "@payloadcms/next": "^3.27.0",
+    "@payloadcms/payload-cloud": "^3.27.0",
+    "@payloadcms/richtext-lexical": "^3.27.0",
+    "@payloadcms/storage-uploadthing": "^3.27.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -28,21 +33,18 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "graphql": "^16.8.1",
-    "lexical": "0.18.0",
+    "lexical": "0.21.0",
     "lucide-react": "^0.454.0",
     "markdown-to-jsx": "^7.5.0",
-    "mongoose": "^6.12.3",
-    "next": "15.0.2",
+    "next": "15.2.2-canary.6",
     "next-plausible": "^3.12.4",
     "next-safe-action": "^7.9.9",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.5",
     "next-view-transitions": "^0.3.2",
     "nextjs-google-analytics": "^2.3.7",
-    "payload": "3.0.0-beta.123",
-    "pino": "^9.5.0",
-    "pino-pretty": "^11.3.0",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "payload": "^3.27.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
@@ -55,14 +57,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.17.23",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/react-google-recaptcha": "^2.1.9",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.1",
     "postcss": "^8",
+    "prettier": "3.5.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.6.2"
   }
 }
