--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@vercel/analytics": "^1.3.2",
-    "@vercel/speed-insights": "^1.0.14",
     "cal-sans": "^1.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -57,6 +55,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "^20.17.23",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -67,7 +66,7 @@
     "eslint-config-next": "15.2.1",
     "postcss": "^8",
     "prettier": "3.5.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.12",
     "typescript": "^5.6.2"
   }
 }
