--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "lucide-react": "^0.454.0",
     "markdown-to-jsx": "^7.5.0",
     "next": "15.2.2-canary.6",
+    "next-intl": "^3.26.5",
     "next-plausible": "^3.12.4",
     "next-safe-action": "^7.9.9",
     "next-themes": "^0.4.5",
-    "next-view-transitions": "^0.3.2",
+    "next-view-transitions": "^0.3.4",
     "nextjs-google-analytics": "^2.3.7",
     "payload": "^3.27.0",
     "react": "19.0.0",
