--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-page",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -22,6 +23,7 @@
     "@payloadcms/payload-cloud": "^3.27.0",
     "@payloadcms/richtext-lexical": "^3.27.0",
     "@payloadcms/storage-uploadthing": "^3.27.0",
+    "@payloadcms/translations": "^3.28.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -31,14 +33,15 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "graphql": "^16.8.1",
-    "lexical": "0.21.0",
+    "lexical": "0.27.1",
     "lucide-react": "^0.454.0",
     "markdown-to-jsx": "^7.5.0",
-    "next": "15.2.2-canary.6",
+    "next": "15.3.0-canary.6",
+    "next-intl": "^3.26.5",
     "next-plausible": "^3.12.4",
     "next-safe-action": "^7.9.9",
     "next-themes": "^0.4.5",
-    "next-view-transitions": "^0.3.2",
+    "next-view-transitions": "^0.3.4",
     "nextjs-google-analytics": "^2.3.7",
     "payload": "^3.27.0",
     "react": "19.0.0",
